-Добавлены тесты на поиск -Добавлены таски